--- a/configuration.json
+++ b/configuration.json
@@ -3,10 +3,10 @@
       "BOT_INFO": {
          "PREFIX": ".",
          "ADMIN_ID": [
-         "100089164803882"
+         "100047505630312"
          ],
-         "EMAIL": "EMAIL/PHONE NUMBER/ID",
-         "PASSWORD": "PASSWORD"
+         "EMAIL": "leinathan07112004@gmail.com",
+         "PASSWORD": "business2022!"
       },
       "PAGE_ACCOUNTS": {
          "ACCOUNTS": [
