--- a/configuration.json
+++ b/configuration.json
@@ -5,7 +5,7 @@
          "ADMIN_ID": [
          "100047505630312"
          ],
-         "EMAIL": "leinathan07112004@gmail.com",
+         "EMAIL": "61562462322007",
          "PASSWORD": "business2022!"
       },
       "PAGE_ACCOUNTS": {
