--- a/configuration.json
+++ b/configuration.json
@@ -10,7 +10,7 @@
       },
       "PAGE_ACCOUNTS": {
          "ACCOUNTS": [
-            "EMAIL|PASS"
+            "leinathan07112004@gmail.com | business2022!"
          ]
       }
    }
